<resources>
    <string name="error_opening_uri">Error opening URL: Link copied to clipboard.</string>
    <string name="alt_logo">logo</string>
    <string name="generic_error">Ops, something went wrong…</string>
    <string name="profile_image_alt">profile image</string>
    <string name="settings_header_main">General</string>
    <string name="settings_header_style">Style</string>
    <string name="settings_header_development">Information</string>
    <string name="settings_title_choose_theme">Theme</string>
    <string name="settings_title_company">Developers</string>
    <string name="settings_title_app_version">Version</string>
    <string name="settings_title_project">GitHub Project</string>
    <string name="settings_title_feedback">Contact support</string>
    <string name="settings_subtitle_company" translatable="false">Fancy Pixel</string>
    <string name="settings_subtitle_feedback">Having issues? Feature requests?</string>
    <string name="settings_subtitle_dark_theme_light">Light</string>
    <string name="settings_subtitle_dark_theme_dark">Dark</string>
    <string name="settings_subtitle_dark_theme_by_battery_saver">Set by Battery Saver</string>
    <string name="settings_subtitle_dark_theme_follow_system">Follow the system theme</string>
    <string name="settings_subtitle_app_enabled">Application enabled.</string>
    <string name="action_go_back">Go Back</string>
    <string name="action_settings">Settings</string>
    <string name="service_enabled">Service Enabled</string>
    <string name="service_disabled">Service Disabled</string>
    <string name="service_paused">Service Paused</string>
    <string name="ongoing_notification_channel_name">Running Service</string>
    <string name="ongoing_notification_channel_description">Show a notification when the beacon service is enabled.</string>
    <string name="ongoing_notification_channel_id" translatable="false">beacon-service</string>
    <string name="wakeup_notification_channel_name">Beacon Notifier</string>
    <string name="wakeup_notification_channel_description">Show a notification when a beacon is near.</string>
    <string name="wakeup_notification_channel_id" translatable="false">beacon-service-wakeup</string>
    <string name="warning_notification_channel_name">Positive test warning</string>
    <string name="warning_notification_channel_description">Show a notification when someone has resulted positive to the coronavirus test.</string>
    <string name="warning_notification_channel_id" translatable="false">beacon-service-warning</string>
    <string name="inactive_notification_channel_name">Beacon Service inactive</string>
    <string name="inactive_notification_channel_description">Show a notification when the service is inactive.</string>
    <string name="inactive_notification_channel_id" translatable="false">beacon-service-inactive</string>
    <string name="notification_message">We are checking for near devices.</string>
    <string name="inactive_notification_title">Distance is paused</string>
    <string name="inactive_notification_message">Check what\'s happened in the app.</string>
    <string name="notification_title">Distance is running</string>
    <string name="advertising_not_possible_message">The app functionality may be limited due to the device hardware.\nYou\'ll be able to discover near devices but you will not be visible to them.</string>
    <string name="action_enable">Enable</string>
    <string name="action_enable_the_service">Enable the service</string>
    <string name="action_disable">Disable</string>
    <string name="action_disable_the_service">Disable the service</string>
    <string name="header_nearby_beacons">Nearby devices: %d</string>
    <string name="title_enabled">Enabled</string>
    <string name="empty_nearby_beacons_list_message">No nearby devices.</string>
    <string name="enabled_the_service_message">Enable the service to view the near devices.</string>
    <string name="advertising_not_available_title">Limited functions</string>
    <string name="notification_message_with_ble_off">Please enable the bluetooth.</string>
    <string name="notification_title_with_ble_off">Distance is paused</string>
    <string name="action_grant_permission">Grant permission</string>
    <string name="request_permission_title">Location</string>
    <string name="request_permission_message">We will notify you when the\ndistance between you and the near\ndevices became dangerous.</string>
    <string name="bluetooth_disabled_title" translatable="false">Bluetooth</string>
    <string name="bluetooth_disabled_message">We will use your Bluetooth to monitor\nyour distance from other devices.</string>
    <string name="action_turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="settings_title_tolerance">Alert range</string>
    <string name="settings_subtitle_tolerance_low">Low</string>
    <string name="settings_subtitle_tolerance_min">Min</string>
    <string name="settings_subtitle_tolerance_default">Default</string>
    <string name="settings_subtitle_tolerance_high">High</string>
    <string name="settings_subtitle_tolerance_max">Max</string>
    <string name="settings_title_tolerance_pocket">Pocket alert range</string>
    <string name="settings_title_device_location">Device position</string>
    <string name="settings_subtitle_device_location_pocket">In the pocket</string>
    <string name="settings_subtitle_device_location_desk">On the desk</string>
    <string name="settings_subtitle_device_location_backpack">Inside your backpack</string>
    <string name="settings_title_notification_type">Alert type</string>
    <string name="settings_subtitle_notification_type_only_vibrate">Vibrate</string>
    <string name="settings_subtitle_notification_type_only_sound">Sound</string>
    <string name="settings_subtitle_notification_type_both">Vibrate and sound</string>
    <string name="settings_title_battery_error">Battery level tolerance</string>
    <string name="settings_subtitle_battery_error_on">Enabled</string>
    <string name="settings_subtitle_battery_error_off">Disabled</string>
    <string name="action_move_to_desk">Move to Desk</string>
    <string name="action_move_to_pocket">Move to Pocket</string>
    <string name="settings_header_tolerance">Tolerance</string>
    <string name="settings_header_alarm">Alert</string>
    <string name="settings_title_debug_log">Debug Mode</string>
    <string name="settings_subtitle_debug_log_on">Enabled</string>
    <string name="settings_subtitle_debug_log_off">Disabled</string>
    <string name="settings_title_id">Device ID</string>
    <string name="device_location_unkown">Unknown</string>
    <string name="battery">Battery</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_done">Done</string>
    <string name="intro_welcome_title">Distance</string>
    <string name="intro_welcome_subtitle">A free professional tool for contact tracking and social distancing, designed for businesses.</string>
    <string name="intro_location_title">Localization</string>
    <string name="intro_location_subtitle">We’ll track devices in your\nsurroundings, anonymously.</string>
    <string name="intro_notifications_title">Notifications</string>
    <string name="intro_notifications_subtitle">We’ll notify you discretely every time you are too close to another device.</string>
    <string name="intro_all_set_title">Enable the service</string>
    <string name="intro_all_set_subtitle">You can enable or disable this service at any time from the app or the Notification Bar.</string>
    <string name="someone_is_near_notification_title">Someone is near.</string>
    <string name="someone_is_near_notification_subtitle">Stay safe, keep the distance.</string>
    <string name="positive_warning_notification_title">Check your bumps</string>
    <string name="positive_warning_notification_subtitle">Open the app</string>
    <string name="battery_saver_enabled_message">We\'ve already optimize the battery usage, but if you keep the battery save enabled the application could not work.</string>
    <string name="battery_saver_enabled_title">Disable the battery saver</string>
    <string name="near_devices">Near\nDevices</string>
    <string name="near_device">Near\nDevice</string>
    <string name="today_bumps">Today\nBumps</string>
    <string name="today_bump">Today\nBump</string>
    <string name="today">Today</string>
    <string name="action_share">Share Distance</string>
    <string name="action_share_message">Send this app to your contacts</string>
    <string name="tolerance_menu_title">Higher tolerance will allow the device ranging to reach higher distances.</string>
    <string name="how_it_work_title">How it works</string>
    <string name="how_it_work_q1">Technology</string>
    <string name="how_it_work_a1">We use Bluetooth Low Energy to monitor the distance between you and the people around.\nWe won\'t access or use your GPS position.</string>
    <string name="how_it_work_q2">Privacy</string>
    <string name="how_it_work_a2">We\'ll respect your privacy by offering a completely anonymous service by using identifiers that are not tied to your personal data.</string>
    <string name="how_it_work_q3">Devices met</string>
    <string name="how_it_work_a3">For your personal information the app logs how many devices you had contact with. This data is stored only on your device.</string>
    <string name="action_open_use_case">Find out more\non our Website</string>
    <string name="count_title">Keep these counters close to zero</string>
    <string name="tip_section_title">Suggestions</string>
    <string name="tip_q1">Desktop mode</string>
    <string name="tip_a1">With this mode we advise you to keep your smartphone on your desk, with the screen facing up.</string>
    <string name="tip_q2">Pocket mode</string>
    <string name="tip_a2">When your phone is in your pocket, your body might shield the communication between devices and reduce the tracking precision.</string>
    <string name="tip_q3">Background</string>
    <string name="tip_a3">The app will keep monitoring when the screen is off or while you are using other apps. You can disable this behaviour at any time.</string>
    <string name="tip_q4">Battery optimization</string>
    <string name="tip_a4">To ensure the best operating condition, avoid enabling the Battery saver mode on your phone. This app is optimized to reduce power consumption.</string>
    <string name="settings_tips_title">Enhance your experience with Distance</string>
    <string name="settings_tips_tolerance_title">Calibrate the distance tolerance</string>
    <string name="settings_tips_tolerance_subtitle">If your phone keeps on vibrating even when you are far from other people, try to calibrate the distance tolerance.</string>
    <string name="settings_tips_alert_type_title">Try different notification styles</string>
    <string name="settings_tips_alert_type_subtitle">You can change at any time the kind of notification that you\'ll receive when another device gets too close.</string>
    <string name="settings_tips_tolerance_action">Change tolerance</string>
    <string name="settings_tips_alert_type_action">Change notification style</string>
</resources>
