<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:textAppearance="@style/AppTheme.HeaderTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="16sp"
            android:text="@string/settings_tips_title"
            android:textColor="@color/colorSecondaryText"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.MainCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:textAllCaps="false"
                    android:textSize="18sp"
                    android:lines="1"
                    android:letterSpacing="0"
                    android:text="@string/settings_tips_tolerance_title"
                    android:textColor="@color/colorPrimaryText"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:lineHeight="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/settings_tips_tolerance_subtitle" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_tips_tolerance_action"
                    android:textAllCaps="false"
                    android:id="@+id/action_change_tolerance"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="start"
                    android:letterSpacing="0"
                    android:textSize="16sp"
                    android:layout_marginStart="-8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/colorPrimaryDark" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:textAllCaps="false"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:lines="1"
                    android:letterSpacing="0"
                    android:text="@string/settings_tips_alert_type_title"
                    android:textColor="@color/colorPrimaryText"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:lineHeight="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/settings_tips_alert_type_subtitle" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_tips_alert_type_action"
                    android:textAllCaps="false"
                    android:id="@+id/action_change_notification_type"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="start"
                    android:letterSpacing="0"
                    android:textSize="16sp"
                    android:layout_marginStart="-8dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>