<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:textAppearance="@style/AppTheme.HeaderTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="16sp"
            android:text="@string/how_it_work_title"
            android:textColor="@color/colorSecondaryText"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    style="@style/AppTheme.MainCard">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="2dp"
                        app:tint="@color/colorPrimaryText"
                        android:alpha="0.3"
                        android:layout_gravity="end"
                        android:layout_margin="24dp"
                        android:src="@drawable/round_bluetooth" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="24dp"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            app:textAllCaps="false"
                            android:textSize="18sp"
                            android:lines="1"
                            android:letterSpacing="0"
                            android:text="@string/how_it_work_q1"
                            android:textColor="@color/colorPrimaryText"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:lineHeight="20dp"
                            android:layout_marginTop="4dp"
                            android:justificationMode="inter_word"
                            android:text="@string/how_it_work_a1" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="0dp"
                    style="@style/AppTheme.MainCard">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="2dp"
                        app:tint="@color/colorPrimaryText"
                        android:alpha="0.3"
                        android:layout_gravity="end"
                        android:layout_margin="24dp"
                        android:src="@drawable/round_cloud_off" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="24dp"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            app:textAllCaps="false"
                            android:textSize="18sp"
                            android:lines="1"
                            android:letterSpacing="0"
                            android:text="@string/how_it_work_q2"
                            android:textColor="@color/colorPrimaryText"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:lineHeight="20dp"
                            android:layout_marginTop="4dp"
                            android:justificationMode="inter_word"
                            android:text="@string/how_it_work_a2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="0dp"
                    style="@style/AppTheme.MainCard">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="2dp"
                        app:tint="@color/colorPrimaryText"
                        android:alpha="0.3"
                        android:layout_gravity="end"
                        android:layout_margin="24dp"
                        android:src="@drawable/round_widgets" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="24dp"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            app:textAllCaps="false"
                            android:textSize="18sp"
                            android:lines="1"
                            android:letterSpacing="0"
                            android:text="@string/how_it_work_q3"
                            android:textColor="@color/colorPrimaryText"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:lineHeight="20dp"
                            android:layout_marginTop="4dp"
                            android:justificationMode="inter_word"
                            android:text="@string/how_it_work_a3" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="0dp"
                    android:visibility="gone"
                    android:id="@+id/action_open_how_it_work_online"
                    style="@style/AppTheme.MainCard">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:gravity="center"
                        android:padding="24dp"
                        android:orientation="vertical">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:cardElevation="0dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/colorPrimaryDark"
                            app:cardCornerRadius="24dp">
                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="8dp"
                                app:tint="@color/colorAccent"
                                android:scaleX="-1"
                                android:src="@drawable/round_arrow" />
                        </com.google.android.material.card.MaterialCardView>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_open_use_case"
                            android:textAllCaps="false"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:textColor="@color/colorAccent"
                            android:layout_gravity="start"
                            android:letterSpacing="0"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</layout>