<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="isAdvertisingPossible"
            type="Boolean" />
        <variable
            name="viewModel"
            type="it.fancypixel.distance.ui.viewmodels.MainViewModel" />
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryDark">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:id="@+id/toolbar">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_splash_logo"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/logo"
                android:visibility="invisible"
                android:contentDescription="@string/alt_logo"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryText"
                android:layout_toEndOf="@+id/logo"
                android:gravity="center"
                android:layout_toStartOf="@+id/action_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/round_short_text_white_36"
                android:tint="@color/colorPrimaryText"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/action_settings"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/action_settings"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="0dp"
                android:visibility="@{isAdvertisingPossible ? View.GONE : View.VISIBLE, default=gone}"
                app:cardBackgroundColor="@color/errorColorBackground"
                app:cardCornerRadius="8dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textAllCaps="false"
                    android:text="@string/advertising_not_possible_message"
                    android:textColor="@color/errorColorText"/>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                app:cornerRadius="8dp"
                android:hapticFeedbackEnabled="true"
                android:visibility="@{viewModel.isServiceEnabled() ? View.GONE : View.VISIBLE, default=gone}"
                android:onClick="@{() -> viewModel.startService()}"
                android:text="@string/action_enable" />
        </LinearLayout>
    </RelativeLayout>
</layout>
